--- a/gleam.toml
+++ b/gleam.toml
@@ -23,6 +23,9 @@ tom = ">= 2.0.0 and < 3.0.0"
 argv = ">= 1.0.0 and < 2.0.0"
 trie_again = ">= 1.0.0 and < 2.0.0"
 gleam_time = ">= 1.4.0 and < 2.0.0"
+gleam_community_maths = ">= 2.0.0 and < 3.0.0"
+shellout = ">= 1.7.0 and < 2.0.0"
+snag = ">= 1.1.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
